# stock-trader-env

./: .coverage  .coveragerc  .gitignore  BLOG.md  CLAUDE.md  Dockerfile  OpenEnv Hackathon Themes.md  README.md  client.py  conftest.py  inference.py  mlflow.db  models.py  openenv.yaml  pyproject.toml  requirements-training.txt  requirements.txt
baselines/: __init__.py  hold_agent.py  llm_agent.py  ppo_agent.py  rule_based_agent.py
blog/: deploy_hf_spaces.md  hackathon_blog.md  linkedin_post.md  pitch_notes.md  pod_commands_v2.md  pod_commands_v3.3.md  pod_commands_v3.md  twitter_thread.md
notebooks/: hackathon_demo.ipynb
results/: grpo_neural_collection.json  grpo_neural_eval.json  grpo_neural_training_log.json  grpo_v3.1_eval.json  raft_base_eval.json  raft_training_log.json  raft_v2_eval.json  sft_v3_training_log.json
scripts/: benchmark_agent.py  coevolve_world_model.py  collect_grpo_prompts.py  collect_model_episodes.py  collect_sft_data.py  debug_hf_api.py  distill_reasoning.py  download_data.py  download_macro.py  estimate_difficulty.py  eval_deepseek_zeroshot.py  eval_sft.py  monitor_training.py  plot_learning_curve.py  plot_learning_curves.py  plot_results.py  plot_training_curves.py  run_baselines.py  run_raft.py  score_with_llm.py  setup_pod.sh  setup_pod_v2.sh  test_llm_local.py  train_grpo.py  train_sft.py  train_world_model.py  upload_dataset_hf.py  upload_market_data_hf.py  validate_llm_scores.py
server/: __init__.py  action_parser.py  app.py  curriculum.py  environment.py  execution.py  feature_engine.py  macro_data.py  market_simulator.py  (+6 more)
(+99 files in other folders)
